adjusted index html and css

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/index.css" / >
+    <link rel="stylesheet" href="src/index.css" />
     <title>AI Yoga Poses generator</title>
 </head>
+
 <body>
-   <h1> Welcome to Ai Yoga Generator</h1>
-   <footer>This Ai Project is coded by <a href="#" target="_blank"> Fonny Chandra </a> is open-sourced on <a href="#" target="_blank">GitHub</a>
-and hosted on <a href="#" target="_blank">Netlify</a>
-</footer>
-<script src="src/index.js"></script>
+    <header>
+    <h1> Welcome to Ai Yoga Generator</h1>
+    </header>
+    <main></main>
+    <footer>This Ai Project is coded by Fonny Chandra, is open-sourced on <a
+            href="https://github.com/fonnycode/yoga-pose-generator" target="_blank">GitHub</a>
+        and hosted on <a href="https://ai-yoga-generator.netlify.app/" target="_blank">Netlify</a>
+    </footer>
+    <script src="src/index.js"></script>
 </body>
-</html> 
+
+</html>
