added header and form

--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
 
 <body>
     <header>
-    <h1> Welcome to Ai Yoga Generator</h1>
+        <h1> Welcome to Ai Yoga Generator</h1>
+        <form>
+            <input type="text" placeholder="Type a yoga pose" autofocus required autocomplete="off" />
+            <input type="submit" />
+        </form>
+        <h2>
+            Example:
+            Q:Yoga breathing to relax <br />
+            A:Alternate Nostril Breathing (Nadi Shodhana) - Balances the energy in the body, calms the mind, and reduces
+            stress and
+            anxiety.
+        </h2>
     </header>
-    <main></main>
+
     <footer>This Ai Project is coded by Fonny Chandra, is open-sourced on <a
             href="https://github.com/fonnycode/yoga-pose-generator" target="_blank">GitHub</a>
         and hosted on <a href="https://ai-yoga-generator.netlify.app/" target="_blank">Netlify</a>
