Added styling for the project

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <header>
         <h1> Welcome to Ai Yoga Generator</h1>
         <form>
-            <input type="text" placeholder="Type a yoga pose" autofocus required autocomplete="off" />
-            <input type="submit" />
+            <input type="text" placeholder="Type a yoga pose" autofocus required autocomplete="off" class="boxInput" />
+            <input type="submit" class="submitButton" />
         </form>
         <h2>
-            Example:
-            Q:Yoga breathing to relax <br />
-            A:Alternate Nostril Breathing (Nadi Shodhana) - Balances the energy in the body, calms the mind, and reduces
+            Example: <br />
+            Q: Yoga breathing to relax <br />
+            A: Alternate Nostril Breathing (Nadi Shodhana) - Balances the energy in the body, calms the mind, and reduces
             stress and
             anxiety.
         </h2>
