--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div id="pose-generator" class="pose hidden"></div>
     </header>
 
-    <footer>This Ai Project is coded by Fonny Chandra, is open-sourced on <a
-            href="https://github.com/fonnycode/yoga-pose-generator" target="_blank">GitHub</a>
+    <footer>This Ai Project is coded by <a href="https://www.linkedin.com/in/fonny-chandra-41b81970/"> Fonny Chandra
+        </a>, is open-sourced on <a href="https://github.com/fonnycode/yoga-pose-generator" target="_blank">GitHub</a>
         and hosted on <a href="https://ai-yoga-generator.netlify.app/" target="_blank">Netlify</a>
     </footer>
     <script src="src/index.js"></script>
